<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="16dp"
    android:paddingVertical="12dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/itemImage"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:contentDescription="Icon"
        android:src="@drawable/item_img"
        app:layout_constraintBottom_toBottomOf="@id/supportingText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/nameItemText" />

    <TextView
        android:id="@+id/nameItemText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameItemText"
        android:textSize="22sp"
        android:textColor="@color/on_surface"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/itemImage"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/categoryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categoryText"
        android:textSize="14sp"
        android:textColor="@color/on_surface_variant"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/nameItemText"
        app:layout_constraintTop_toBottomOf="@id/nameItemText"/>
    <TextView
        android:id="@+id/supportingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/supportingText"
        android:textSize="14sp"
        android:textColor="@color/on_surface_variant"
        app:layout_constraintStart_toStartOf="@id/nameItemText"
        app:layout_constraintTop_toBottomOf="@id/categoryText"/>
    <TextView
        android:id="@+id/priceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priceText"
        android:textColor="@color/tertiary"
        android:textSize="22sp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/nameItemText"/>
</androidx.constraintlayout.widget.ConstraintLayout>