<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surface_container_high"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/loginLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="25sp"
        android:textColor="@color/on_surface"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginInputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login"
        android:textColorHint="@color/on_surface_variant"
        android:layout_marginTop="32dp"
        app:boxBackgroundColor="@color/surface_container_highest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginLabel"
        style="@style/Widget.Material3.TextInputLayout.FilledBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/on_surface"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColorHint="@color/on_surface_variant"
        android:layout_marginTop="16dp"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/show_password_icon"
        app:boxBackgroundColor="@color/surface_container_highest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginInputField"
        style="@style/Widget.Material3.TextInputLayout.FilledBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:textColor="@color/on_surface"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/resetLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_my_password"
        android:layout_marginTop="16dp"
        android:textColor="@color/primary"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true"
        android:paddingHorizontal="12dp"
        android:paddingVertical="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordInputField"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="@color/secondary"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:strokeColor="@color/outline"
        app:strokeWidth="1dp"
        app:backgroundTint="@android:color/transparent"
        app:cornerRadius="32dp"
        app:layout_constraintTop_toBottomOf="@id/resetLabel"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/primary"
        android:textStyle="bold"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:strokeColor="@color/outline"
        app:strokeWidth="1dp"
        app:backgroundTint="@android:color/transparent"
        app:cornerRadius="32dp"
        app:layout_constraintTop_toBottomOf="@id/resetLabel"
        app:layout_constraintEnd_toStartOf="@id/cancelBtn"
        />

</androidx.constraintlayout.widget.ConstraintLayout>