<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".CartActivity">
    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="back"
        android:background="@null"
        android:padding="16dp"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="4dp"
        android:src="@drawable/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/cartLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cartLabel"
        android:textSize="22sp"
        android:textColor="@color/on_surface"
        app:layout_constraintStart_toEndOf="@id/backBtn"
        app:layout_constraintTop_toTopOf="@id/backBtn"
        app:layout_constraintBottom_toBottomOf="@id/backBtn"/>
    <ImageButton
        android:id="@+id/cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="cancel"
        android:background="@null"
        android:src="@drawable/cancel_button"
        android:padding="14dp"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/counterLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/counterLabel"
        android:textColor="@color/on_surface_variant"
        android:textSize="16sp"
        android:layout_margin="10dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backBtn"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCartList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/counterLabel"
        app:layout_constraintBottom_toTopOf="@id/orderTotalTextView"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/placeOrderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary"
        android:text="Place order"
        android:textColor="@color/on_primary"
        android:drawableLeft="@drawable/smile"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/taxTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tax:"
        android:textColor="@color/on_surface"
        android:layout_marginBottom="14dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/placeOrderButton"
        />
    <TextView
        android:id="@+id/taxPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textSize="16sp"
        android:textColor="@color/tertiary"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/taxTextView"/>

    <TextView
        android:id="@+id/shippingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Shipping:"
        android:textSize="16sp"
        android:textColor="@color/on_surface"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/taxTextView"
        />
    <TextView
        android:id="@+id/shippingPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textSize="16sp"
        android:textColor="@color/tertiary"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/shippingTextView"/>
    <TextView
        android:id="@+id/subtotalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Subtotal:"
        android:textSize="16sp"
        android:textColor="@color/on_surface"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/shippingTextView"
        />
    <TextView
        android:id="@+id/subtotalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textSize="16sp"
        android:textColor="@color/tertiary"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/subtotalTextView"/>
    <TextView
        android:id="@+id/orderTotalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Order Total:"
        android:textSize="22sp"
        android:textColor="@color/on_surface"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/subtotalTextView"
        />
    <TextView
        android:id="@+id/totalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textSize="22sp"
        android:textColor="@color/tertiary"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/orderTotalTextView"/>

</androidx.constraintlayout.widget.ConstraintLayout>